Fix workflow path for pylint

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,6 +5,9 @@ on: [push, pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
@@ -14,4 +17,4 @@ jobs:
       - name: Install pylint
         run: pip install pylint
       - name: Run pylint
-        run: python -m pylint my_code.py
+        run: python -m pylint ./my_code.py
